unpackaged/main/default/objects/Account/fields/facility_npi__c.field-meta.xml
<CustomField>
    <fullName>facility_npi__c</fullName>
    <description>A National Provider Identifier (NPI) is the 10-digit numeric identifier issued by the US government that uniquely identifies a healthcare provider or facility.</description>
    <externalId>true</externalId>
    <label>Facility NPI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>