unpackaged/main/default/objects/Account/fields/First_API_Contraction_At__c.field-meta.xml
<CustomField>
    <fullName>First_API_Contraction_At__c</fullName>
    <label>First API Contraction At</label>
    <type>DateTime</type>
</CustomField>