unpackaged/main/default/objects/Account/fields/First_Appointment_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment_Booked_Date__c</fullName>
    <description>This field is populated when Pendo_Appointments_Booked_Last_30_Days__c moves from 0 to 1 for the first time. It is used in onboarding metrics to see time to first booking.</description>
    <inlineHelpText>This field is populated when Pendo_Appointments_Booked_Last_30_Days__c moves from 0 to 1 for the first time. It is used in onboarding metrics to see time to first booking.</inlineHelpText>
    <label>First Appointment Booked Date</label>
    <type>Date</type>
</CustomField>