unpackaged/main/default/objects/Account/fields/First_Developer_Sales_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Developer_Sales_Attempt__c</fullName>
    <label>First Developer Sales Attempt</label>
    <type>DateTime</type>
</CustomField>