unpackaged/main/default/objects/Account/fields/First_Integrated_At__c.field-meta.xml
<CustomField>
    <fullName>First_Integrated_At__c</fullName>
    <label>First Integrated At</label>
    <type>DateTime</type>
</CustomField>