unpackaged/main/default/objects/Account/fields/First_Integration_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Integration_Attempt__c</fullName>
    <label>First Integration Attempt</label>
    <type>DateTime</type>
</CustomField>