unpackaged/main/default/objects/Account/fields/First_Partnership_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Partnership_Attempt__c</fullName>
    <label>First Partnership Attempt</label>
    <type>DateTime</type>
</CustomField>