unpackaged/main/default/objects/Account/fields/First_Reseller_Contraction_At__c.field-meta.xml
<CustomField>
    <fullName>First_Reseller_Contraction_At__c</fullName>
    <label>First Reseller Contraction At</label>
    <type>DateTime</type>
</CustomField>