unpackaged/main/default/objects/Account/fields/First_SaaS_Contraction_At__c.field-meta.xml
<CustomField>
    <fullName>First_SaaS_Contraction_At__c</fullName>
    <label>First SaaS Contraction At</label>
    <type>DateTime</type>
</CustomField>