unpackaged/main/default/objects/Account/fields/First_SaaS_Sales_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_SaaS_Sales_Attempt__c</fullName>
    <label>First SaaS Sales Attempt</label>
    <type>DateTime</type>
</CustomField>