unpackaged/main/default/objects/Account/fields/First_Upsell_Sales_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Upsell_Sales_Attempt__c</fullName>
    <label>First Upsell Sales Attempt</label>
    <type>DateTime</type>
</CustomField>