unpackaged/main/default/objects/Account/fields/First_Upsold_At__c.field-meta.xml
<CustomField>
    <fullName>First_Upsold_At__c</fullName>
    <label>First Upsold At</label>
    <type>DateTime</type>
</CustomField>