unpackaged/main/default/objects/Account/fields/Formerly_Known_As__c.field-meta.xml
<CustomField>
    <fullName>Formerly_Known_As__c</fullName>
    <inlineHelpText>Previous name used by the Account</inlineHelpText>
    <label>Formerly Known As</label>
    <length>128</length>
    <type>Text</type>
</CustomField>