unpackaged/main/default/objects/Account/fields/Hierarchy_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Adjusted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hierarchy Adjusted</label>
    <type>Checkbox</type>
</CustomField>