unpackaged/main/default/objects/Account/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <description>Indicates where the account sits within the hierarchy in Salesforce, with 1 indicating an ultimate parent.</description>
    <label>Hierarchy Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>