unpackaged/main/default/objects/Account/fields/hubspot_record_id__c.field-meta.xml
<CustomField>
    <fullName>hubspot_record_id__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Record ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>