unpackaged/main/default/objects/Account/fields/Impartner_CRM_Id__c.field-meta.xml
<CustomField>
    <fullName>Impartner_CRM_Id__c</fullName>
    <description>This field stores the unique ID for this record in Impartner, our partner portal software, which stores it&#39;s own table of accounts. This field is set as unique in SFDC since we need to maintain a 1:1 relationship of Accounts in SFDC to their related records in Impartner.</description>
    <externalId>true</externalId>
    <label>Impartner CRM ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>