unpackaged/main/default/objects/Account/fields/Impartner_Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Impartner_Partner_Level__c</fullName>
    <label>Impartner Partner Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>