unpackaged/main/default/objects/Account/fields/Integrated_Practice_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Practice_Lifecycle__c</fullName>
    <label>Integrated Practice Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Churning</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>