unpackaged/main/default/objects/Account/fields/Integrations_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Integrations_of_Interest__c</fullName>
    <label>Integrations of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Practice_Management_Systems</valueSetName>
    </valueSet>
</CustomField>