unpackaged/main/default/objects/Account/fields/Is_Practice_Location_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Is_Practice_Location_Numeric__c</fullName>
    <description>Indicates if an Account&#39;s Type is Practice Location. Used for Account Hierarchy package rollups.</description>
    <formula>IF(ISPICKVAL( Type , &quot;Practice Location&quot;), 1, 0)</formula>
    <label>Is Practice Location (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>