unpackaged/main/default/objects/Account/fields/Is_Product_Institution__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Institution__c</fullName>
    <formula>IF(nexhealth_institution_id__c != null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Product Institution</label>
    <type>Checkbox</type>
</CustomField>