unpackaged/main/default/objects/Account/fields/Is_Product_Location__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Location__c</fullName>
    <formula>IF(nexhealth_location_id__c != null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Product Location</label>
    <type>Checkbox</type>
</CustomField>