unpackaged/main/default/objects/Account/fields/is_sales_assignable_smb__c.field-meta.xml
<CustomField>
    <fullName>is_sales_assignable_smb__c</fullName>
    <formula>AND(
    ISBLANK(Parent.Id),
    Record_Type__c = &quot;Prospect&quot;,
    Account_Transfer_Cooldown_Date__c &lt;= TODAY(),
    Owner.User_Caseified_ID__c = &quot;0056g000004oHyPAAU&quot;,
    NOT(ISPICKVAL(status__c, &quot;Disqualified&quot;)),
    PMS_Integration_Is_Supported__c = TRUE,
    ISPICKVAL(organization_type__c, &quot;Dental Practice&quot;)
)</formula>
    <label>Is Sales Assignable - SMB</label>
    <type>Checkbox</type>
</CustomField>