unpackaged/main/default/objects/Account/fields/Last_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filled in via a flow with the Opportunity Owner of the most recently closed won opp (with SaaS taking priority).</description>
    <label>Last Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>