unpackaged/main/default/objects/Account/fields/Last_API_Contraction_At__c.field-meta.xml
<CustomField>
    <fullName>Last_API_Contraction_At__c</fullName>
    <label>Last API Contraction At</label>
    <type>DateTime</type>
</CustomField>