unpackaged/main/default/objects/Account/fields/last_closed_lost_date__c.field-meta.xml
<CustomField>
    <fullName>last_closed_lost_date__c</fullName>
    <inlineHelpText>Last SaaS Closed Lost Opportunity Date</inlineHelpText>
    <label>Last Closed Lost Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>SaaS - Renewal, Enterprise, New Business, Upsell</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>