unpackaged/main/default/objects/Account/fields/Last_Developer_Sales_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Developer_Sales_Attempt__c</fullName>
    <label>Last Developer Sales Attempt</label>
    <type>DateTime</type>
</CustomField>