unpackaged/main/default/objects/Account/fields/Last_Integrated_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Integrated_At__c</fullName>
    <label>Last Integrated At</label>
    <type>DateTime</type>
</CustomField>