unpackaged/main/default/objects/Account/fields/Last_Integration_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Integration_Attempt__c</fullName>
    <label>Last Integration Attempt</label>
    <type>DateTime</type>
</CustomField>