unpackaged/main/default/objects/Account/fields/last_new_business_opp_create_date__c.field-meta.xml
<CustomField>
    <fullName>last_new_business_opp_create_date__c</fullName>
    <label>Last New Business Opp Create Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>New Business</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>