unpackaged/main/default/objects/Account/fields/Last_Onboarding_Manager__c.field-meta.xml
<CustomField>
    <fullName>Last_Onboarding_Manager__c</fullName>
    <description>Most recent Onboarding Manager</description>
    <inlineHelpText>Most recent Onboarding Manager</inlineHelpText>
    <label>Last Onboarding Manager</label>
    <type>TextArea</type>
</CustomField>