unpackaged/main/default/objects/Account/fields/Last_Open_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Last_Open_Opportunity_Stage__c</fullName>
    <description>Last stage name of an open opportunity, sorted by stage edit date of open opps. Use in conjunction with Open Opp Count</description>
    <label>Last Open Opp Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>