unpackaged/main/default/objects/Account/fields/Last_Partnership_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Partnership_Attempt__c</fullName>
    <label>Last Partnership Attempt</label>
    <type>DateTime</type>
</CustomField>