unpackaged/main/default/objects/Account/fields/Last_Reseller_Contraction_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Reseller_Contraction_At__c</fullName>
    <label>Last Reseller Contraction At</label>
    <type>DateTime</type>
</CustomField>