unpackaged/main/default/objects/Account/fields/Last_SaaS_Contraction_At__c.field-meta.xml
<CustomField>
    <fullName>Last_SaaS_Contraction_At__c</fullName>
    <label>Last SaaS Contraction At</label>
    <type>DateTime</type>
</CustomField>