unpackaged/main/default/objects/Account/fields/Last_SaaS_Market_Classification_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SaaS_Market_Classification_Date__c</fullName>
    <label>Last SaaS Market Classification Date</label>
    <type>Date</type>
</CustomField>