unpackaged/main/default/objects/Account/fields/Last_SaaS_Sales_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_SaaS_Sales_Attempt__c</fullName>
    <label>Last SaaS Sales Attempt</label>
    <type>DateTime</type>
</CustomField>