unpackaged/main/default/objects/Account/fields/Last_Sales_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity_Date__c</fullName>
    <label>Last Sales Activity Date</label>
    <type>Date</type>
</CustomField>