unpackaged/main/default/objects/Account/fields/Last_Sales_Activity_Opp__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity_Opp__c</fullName>
    <label>Last Sales Activity Opp</label>
    <type>Date</type>
</CustomField>