unpackaged/main/default/objects/Account/fields/Last_Sales_Activity_task__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity_task__c</fullName>
    <label>Last Sales Activity task</label>
    <type>Date</type>
</CustomField>