unpackaged/main/default/objects/Account/fields/Last_Sales_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Assignment_Date__c</fullName>
    <label>Last Sales Assignment Date</label>
    <type>Date</type>
</CustomField>