unpackaged/main/default/objects/Account/fields/Last_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transfer_Date__c</fullName>
    <description>Date ownership for the account last changed</description>
    <inlineHelpText>Date ownership for the account last changed</inlineHelpText>
    <label>Last Transfer Date</label>
    <type>Date</type>
</CustomField>