unpackaged/main/default/objects/Account/fields/Last_Upsell_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Upsell_Attempt__c</fullName>
    <label>Last Upsell Attempt</label>
    <type>DateTime</type>
</CustomField>