unpackaged/main/default/objects/Account/fields/Last_Upsold_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Upsold_At__c</fullName>
    <label>Last Upsold At</label>
    <type>DateTime</type>
</CustomField>