unpackaged/main/default/objects/Account/fields/license_count_paid__c.field-meta.xml
<CustomField>
    <fullName>license_count_paid__c</fullName>
    <label>Total Paid Licenses</label>
    <summarizedField>Opportunity.license_count__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Enterprise, Reseller, Referral, New Business, Upsell, API Location</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>