unpackaged/main/default/objects/Account/fields/Link_to_Chargebee__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Chargebee__c</fullName>
    <description>Dynamic URL that links to Chargebee Customer Profile</description>
    <formula>IF(
ISBLANK( Chargebee_Customer_ID__c ),
&quot;&quot;,
&quot;https://nexhealth.chargebee.com/d/customers/&quot; +  Chargebee_Customer_ID__c 
)</formula>
    <inlineHelpText>Grabs &quot;Chargebee ID&quot; on the Account level</inlineHelpText>
    <label>Link to Chargebee</label>
    <type>Text</type>
</CustomField>