unpackaged/main/default/objects/Account/fields/Link_to_Tools__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Tools__c</fullName>
    <description>Dynamic URL that links to Tools Institution</description>
    <formula>IF(
ISBLANK( nexhealth_institution_id__c ),
&quot;&quot;,
&quot;https://nexhealth.info/tools/institutions/&quot; + nexhealth_institution_id__c
)</formula>
    <inlineHelpText>Uses NexHealth Institution ID to create a hyperlink to Tools</inlineHelpText>
    <label>Link to Tools</label>
    <type>Text</type>
</CustomField>