unpackaged/main/default/objects/Account/fields/mch_institution_id__c.field-meta.xml
<CustomField>
    <fullName>mch_institution_id__c</fullName>
    <description>Unique ID of the company within the MCH dataset</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID of the company within the MCH dataset</inlineHelpText>
    <label>MCH Institution ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>