unpackaged/main/default/objects/Account/fields/mch_last_sync_date__c.field-meta.xml
<CustomField>
    <fullName>mch_last_sync_date__c</fullName>
    <description>Last time this record was synced to MCH data</description>
    <inlineHelpText>Last time this record was synced to MCH data</inlineHelpText>
    <label>MCH Last Sync Date</label>
    <type>Date</type>
</CustomField>