unpackaged/main/default/objects/Account/fields/mch_main_parent_id__c.field-meta.xml
<CustomField>
    <fullName>mch_main_parent_id__c</fullName>
    <description>Unique ID of the ultimate parent of this company within MCH data</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID of the ultimate parent of this company within MCH data</inlineHelpText>
    <label>MCH Main Parent ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>