unpackaged/main/default/objects/Account/fields/mch_main_parent_name__c.field-meta.xml
<CustomField>
    <fullName>mch_main_parent_name__c</fullName>
    <description>Ultimate parent of the company listed according to MCH data</description>
    <inlineHelpText>Ultimate parent of the company listed according to MCH data</inlineHelpText>
    <label>MCH Main Parent Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>