unpackaged/main/default/objects/Account/fields/mch_parent_id__c.field-meta.xml
<CustomField>
    <fullName>mch_parent_id__c</fullName>
    <description>Unique ID of this company&#39;s parent according to MCH data</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID of this company&#39;s parent according to MCH data</inlineHelpText>
    <label>MCH Parent ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>