unpackaged/main/default/objects/Account/fields/mch_parent_name__c.field-meta.xml
<CustomField>
    <fullName>mch_parent_name__c</fullName>
    <description>Name of the parent company according to MCH data</description>
    <inlineHelpText>Name of the parent company</inlineHelpText>
    <label>MCH Parent Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>