unpackaged/main/default/objects/Account/fields/MRR_from_Churn__c.field-meta.xml
<CustomField>
    <fullName>MRR_from_Churn__c</fullName>
    <description>This calculates total churned MRR on the Account</description>
    <inlineHelpText>This calculates total churned MRR on the Account</inlineHelpText>
    <label>MRR from Churn</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>