unpackaged/main/default/objects/Account/fields/MRR_from_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>MRR_from_Open_Opportunities__c</fullName>
    <label>SaaS New Biz Opps MRR - Open</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>New Business, Enterprise</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>notEqual</operation>
        <value>Add Features, Add Licenses</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>