unpackaged/main/default/objects/Account/fields/MRR_from_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>MRR_from_Opportunities__c</fullName>
    <description>This field rolls up the MRR from all Closed Won opportunities.

deprecated 7/14/2023</description>
    <inlineHelpText>This field rolls up the MRR from all Closed Won opportunities.</inlineHelpText>
    <label>deprecated MRR from Opportunities</label>
    <summarizedField>Opportunity.Total_Software_Sales__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.billing_status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>