unpackaged/main/default/objects/Account/fields/NexHealth_Client_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>NexHealth_Client_Email_Domain__c</fullName>
    <description>The email domain of the client as per product data.</description>
    <inlineHelpText>The email domain of the client as per product data.</inlineHelpText>
    <label>NexHealth Client Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>