unpackaged/main/default/objects/Account/fields/nexhealth_institution_id__c.field-meta.xml
<CustomField>
    <fullName>nexhealth_institution_id__c</fullName>
    <description>The Institution Id of the account as per NexHealth&#39;s product.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Institution Id of the account as per NexHealth&#39;s product.</inlineHelpText>
    <label>NexHealth Institution ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>