unpackaged/main/default/objects/Account/fields/nexhealth_location_id__c.field-meta.xml
<CustomField>
    <fullName>nexhealth_location_id__c</fullName>
    <inlineHelpText>Location ID in Tools</inlineHelpText>
    <label>NexHealth Location ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>