unpackaged/main/default/objects/Account/fields/Non_SOM__c.field-meta.xml
<CustomField>
    <fullName>Non_SOM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Account is considered Other Serviced Market</inlineHelpText>
    <label>RevOps-OSM</label>
    <type>Checkbox</type>
</CustomField>