unpackaged/main/default/objects/Account/fields/Number_of_Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Child_Accounts__c</fullName>
    <description>Rolls up the number of children nested under this parent account. Rollup lives in DLSR.</description>
    <inlineHelpText>Rolls up the number of children nested under this parent account.</inlineHelpText>
    <label>Number of Child Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>