unpackaged/main/default/objects/Account/fields/Number_of_Customers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customers__c</fullName>
    <description>Number of customers the partner has</description>
    <inlineHelpText>Number of customers the partner has</inlineHelpText>
    <label>Number of Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>