unpackaged/main/default/objects/Account/fields/number_of_locations__c.field-meta.xml
<CustomField>
    <fullName>number_of_locations__c</fullName>
    <description>Total number of locations the practice has</description>
    <inlineHelpText>How many total offices does this practice have? (opportunity value)</inlineHelpText>
    <label>Total Practice Locations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>