unpackaged/main/default/objects/Account/fields/Number_of_Locations_from_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations_from_Opportunities__c</fullName>
    <description>This field rolls up the number of locations from Closed Won opportunities.</description>
    <inlineHelpText>Number of offices currently paying for NexHealth</inlineHelpText>
    <label>Total Paid Locations</label>
    <summarizedField>Opportunity.number_of_locations__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Enterprise, Referral, New Business, Upsell</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>