unpackaged/main/default/objects/Account/fields/Number_of_Locations_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations_Parent_Account__c</fullName>
    <formula>Parent.number_of_locations__c</formula>
    <label>Number of Locations - Parent Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>