unpackaged/main/default/objects/Account/fields/Number_of_Practice_Location_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Practice_Location_Accounts__c</fullName>
    <description>Used as roll up field for Account Hierarchy package to roll up Accounts where Type = Practice Location in hierarchy.</description>
    <label>Number of Practice Location Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>