unpackaged/main/default/objects/Account/fields/number_of_providers__c.field-meta.xml
<CustomField>
    <fullName>number_of_providers__c</fullName>
    <inlineHelpText>How many providers at the company?</inlineHelpText>
    <label>Number of Providers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>