unpackaged/main/default/objects/Account/fields/Number_of_Representatives__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Representatives__c</fullName>
    <label>Number of Representatives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>