unpackaged/main/default/objects/Account/fields/Number_of_Support_Cases_Last_Two_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Support_Cases_Last_Two_Weeks__c</fullName>
    <description>Rolls up the number of support cases created in the last two weeks on the account.</description>
    <inlineHelpText>Rolls up the number of support cases created in the last two weeks on the account.</inlineHelpText>
    <label>Number of Support Cases - Last Two Weeks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>