unpackaged/main/default/objects/Account/fields/Nurture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Reason__c</fullName>
    <description>Reason the Account was nurtured</description>
    <inlineHelpText>Reason the Account was nurtured</inlineHelpText>
    <label>Nurture Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>nurture_reasons</valueSetName>
    </valueSet>
</CustomField>