unpackaged/main/default/objects/Account/fields/Nurtured_By__c.field-meta.xml
<CustomField>
    <fullName>Nurtured_By__c</fullName>
    <label>Nurtured By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>