unpackaged/main/default/objects/Account/fields/Nurtured_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Nurtured_By_Role__c</fullName>
    <label>Nurtured By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>