unpackaged/main/default/objects/Account/fields/of_Open_Support_Cases_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>of_Open_Support_Cases_in_Hierarchy__c</fullName>
    <description>Used as roll up field for Account Hierarchy package to roll up Number of Support Cases - last two weeks in hierarchy.</description>
    <label># of Open Support Cases in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>