unpackaged/main/default/objects/Account/fields/Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager__c</fullName>
    <label>Office Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>