unpackaged/main/default/objects/Account/fields/Onboarding_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Case_Status__c</fullName>
    <label>Last Onboarding Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>