unpackaged/main/default/objects/Account/fields/Onboarding_Summary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Summary_Notes__c</fullName>
    <description>Stamped upon close of TaskRay Project</description>
    <label>Onboarding Summary Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>