unpackaged/main/default/objects/Account/fields/Online_Reputation__c.field-meta.xml
<CustomField>
    <fullName>Online_Reputation__c</fullName>
    <label>Online Reputation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>