unpackaged/main/default/objects/Account/fields/opp_count_new_business_closed_lost__c.field-meta.xml
<CustomField>
    <fullName>opp_count_new_business_closed_lost__c</fullName>
    <label>SaaS New Biz Opps - Lost</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>New Business, Enterprise</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>notEqual</operation>
        <value>Add Features, Add Licenses</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>